# AIF25-Evolutionary

./: .gitignore  LICENSE  README.md  cmaes_walker2D.py  mapelites_walker2D.py  neat_walker2D.py  pyproject.toml  requirements.txt  resume_cmaes_walker2D.py  resume_mapelites_walker2D.py  resume_neat_walker2D.py
CMA-ME/: pyproject.toml  requirements.txt
CMAE-ME/: pyproject.toml
CMAES/: config.py  evaluation.py  main.py  neuralnetwork.py  resume_cmaes_walker2D.py  trainer.py  visualization.py
NEAT/: config.py  evaluation.py  main.py  neat_helpers.py  record.py  resume_neat_walker2D.py  trainer.py  utils.py  visualization.py
configs/: neat_walker2d.cfg  neat_walker2d_1000gen_noerror.cfg
runs_cmaes_walker2d/: phase_04_noise.json  phase_04_noise.npy  phase_06_noise.json
runs_cmaes_walker2d_N50_P6/: phase_07_noise.json  phase_07_noise.npy  phase_08_noise.json  phase_08_noise.npy  phase_09_noise.json  phase_09_noise.npy
runs_cmaes_walker2d_pop50/: phase_02_noise.npy  phase_04_noise.json  phase_05_noise.json  phase_06_noise.json
runs_mapelites_2_walker2d/: phase_01_noise.npy  phase_02_noise.npy  phase_03_noise.npy  phase_04_noise.npy  phase_05_noise.npy  phase_06_noise.npy  phase_07_noise.npy  phase_08_noise.json  phase_08_noise.npy  phase_09_noise.npy  phase_10_noise.npy  phase_11_noise.npy  phase_12_noise.npy
runs_mapelites_walker2d/: phase_01_noise.npy  phase_03_noise.npy  phase_06_noise.json  phase_06_noise.npy
runs_mapelites_walker2d_N50_P6/: best_solution.npy
runs_neat_2_walker2d/: phase_01_noise.json  phase_01_noise.npy  phase_02_noise.json  (+3 more)
(+363 files in other folders)
